Comments on use of MAVEN_OPTS and JAVA_OPTS
git-svn-id: https://svn.exoplatform.org/projects/tools/trunk@10977 42d3c691-033b-0410-95b4-af486b8189e5