@@ -13,7 +13,7 @@ JAVA_HOME=$EXO_BASE_DIRECTORY/jdk1.5
 
 BSH_EXO_BASE_DIRECTORY=$JAVA_DIR
 BSH_JAVA_HOME=$JAVA_HOME
-BSH_M2_REPOS="file:$BSH_EXO_BASE_DIRECTORY/exo-dependencies/repository, http://maven2.exoplatform.org/maven"
+BSH_M2_REPOS="file:$BSH_EXO_BASE_DIRECTORY/exo-dependencies/repository, http://maven2.exoplatform.org/rest/maven2"
 
 ##################################################################################
 USER_HOME='/cygdrive/c/Documents\ and\ Settings/$USERNAME'
@@ -24,11 +24,13 @@ EXO_WORKING_DIR=$EXO_BASE_DIRECTORY/exo-working
 
 M2_HOME=$EXO_BASE_DIRECTORY/maven2
 M2_REPO=$EXO_BASE_DIRECTORY/exo-dependencies/repository
-M2_REPOS="file:$EXO_BASE_DIRECTORY/exo-dependencies/repository"
-MAVEN_OPTS="-Xshare:auto -Xms128m -Xmx512m" 
+M2_REPOS="file:$EXO_BASE_DIRECTORY/exo-dependencies/repository, http://maven2.exoplatform.org/rest/maven2"
 
-#echo "This is a test"
-JAVA_OPTS="-Xshare:auto -Xms128m -Xmx256m -Dexo.directory.base=$EXO_BASE_DIRECTORY" 
+# MAVEN_OPTS will be used as JVM options for the build by 'exobuild' command
+MAVEN_OPTS="-Xshare:auto -Xms128m -Xmx512m -XX:MaxPermSize=128M" 
+
+# JAVA_OPTS will be used by tomcat
+JAVA_OPTS="-Xshare:auto -Xms256m -Xmx1536m -XX:MaxPermSize=256M -Dexo.directory.base=$EXO_BASE_DIRECTORY" 
 PATH=/usr/local/bin:$JAVA_HOME/bin:$PATH:$M2_HOME/bin:$EXO_SH_SCRIPT
 
 
